Bug 515963 - Knife Tool turns text into blocks
Summary: Knife Tool turns text into blocks
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Vector (other bugs)
Version First Reported In: 6.0.0-beta1
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-13 21:50 UTC by Vitamorus
Modified: 2026-02-26 13:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Knife Tool turns text into blocks (422.53 KB, video/mp4)
2026-02-13 21:50 UTC, Vitamorus
Details
system info (16.63 KB, text/plain)
2026-02-13 21:51 UTC, Vitamorus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vitamorus 2026-02-13 21:50:59 UTC
Created attachment 189541 [details]
Knife Tool turns text into blocks

SUMMARY
When slicing a text object using the new Knife Tool, the characters turn into plain rectangles. While the result is understandable, it's not ideal. I think the Knife Tool ought to either 

A) ignore text (good for last minute changes to comic panels after adding text) or
B) automatically turn the letters into paths before slicing (could be used to great effect I reckon).

STEPS TO REPRODUCE
1. Create a new document
2. Add some text
3. Slice the text with the Knife Tool

This was tested with Qt Platform Name:  "wayland". 
Attached is a video recording of the bug, along with additional system info.
Comment 1 Vitamorus 2026-02-13 21:51:23 UTC
Created attachment 189542 [details]
system info
Comment 2 Bug Janitor Service 2026-02-16 15:03:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2650
Comment 3 Dmitry Kazakov 2026-02-26 13:55:07 UTC
Git commit 3eb1880822b1e6d3d8f4d677ae1cf4ebd02951be by Dmitry Kazakov, on behalf of Agata Cacko.
Committed on 26/02/2026 at 13:37.
Pushed by dkazakov into branch 'master'.

Fix Knife Tool affecting text shapes

Before this commit, the Knife Tool would cut through text shapes,
but not really cut text, but their blocky representation.
This commit disables this behaviour, making the Knife Tool ignore those
shapes completely.

M  +10   -0    plugins/tools/tool_knife/CutThroughShapeStrategy.cpp

https://invent.kde.org/graphics/krita/-/commit/3eb1880822b1e6d3d8f4d677ae1cf4ebd02951be
Comment 4 Dmitry Kazakov 2026-02-26 13:55:36 UTC
Git commit e403a7393772d31eacbe9ac22796b3c494baabed by Dmitry Kazakov, on behalf of Agata Cacko.
Committed on 26/02/2026 at 13:55.
Pushed by dkazakov into branch 'krita/6.0'.

Fix Knife Tool affecting text shapes

Before this commit, the Knife Tool would cut through text shapes,
but not really cut text, but their blocky representation.
This commit disables this behaviour, making the Knife Tool ignore those
shapes completely.

M  +10   -0    plugins/tools/tool_knife/CutThroughShapeStrategy.cpp

https://invent.kde.org/graphics/krita/-/commit/e403a7393772d31eacbe9ac22796b3c494baabed