Fix Knife Tool affecting text shapes

Before this commit, the Knife Tool would cut through text shapes,
but not really cut text, but their blocky representation.
This commit disables this behaviour, making the Knife Tool ignore those
shapes completely.

BUG:515963